<?xml version="1.0" encoding="utf-8"?>
<com.gmax.kotlin_one.widget.CustomDrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlaout"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.amap.api.maps.TextureMapView
            android:id="@+id/tral_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/x30"
            android:layout_alignParentRight="true"
            >
            <ImageView
                android:id="@+id/new_wei"
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/x60"
                android:src="@mipmap/icon_map_2"
                android:layout_marginTop="@dimen/x110"
                />
            <ImageView
                android:id="@+id/new_icon"
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/x60"
                android:src="@mipmap/icon_1"
                android:layout_alignBottom="@+id/new_icon"
                android:layout_marginTop="@dimen/x20"
                />

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/x360"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_gravity="start"
        android:background="#fff"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="9"
            >
            <TextView
                android:id="@+id/dd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="@dimen/x30"
                android:textSize="@dimen/SIZE_20_SP"
                android:textColor="#000"
                android:layout_gravity="center_horizontal"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_indicator_line"
                android:background="@color/view_line"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/fg_trajectory_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/custoom_dl_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_mate_dove"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/fg_trajectory_btnstart"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/fg_trajectory_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/add_pigeon_bg3"
                android:layout_weight="1"
                android:textColor="@color/colorBlue"
                android:text="@string/start_fly"/>

        </LinearLayout>

    </LinearLayout>

</com.gmax.kotlin_one.widget.CustomDrawerLayout>